# engineering-civilization

./: .gitignore  Cargo.toml  Cargo.toml.backup  PHASE0_REPORT.md  PROJECT-REFERENCE.md  create_ec_memory.sh  explore.sh  explore_output.txt  fix_ec_memory.sh  fix_visibility.sh  fix_week21.sh  phase0_fix.patch  phase0_verify.sh  phase2_verify.sh  read_remaining.sh  read_remaining_output.txt  report.json  run_week20.sh  run_week21.sh  sel-agent-report.json  test-results.txt  test_output.txt  update_official_doc.sh  update_workspace.sh  week21_setup.sh  write_codegen.py
.github/workflows/: ci.yml
crates/ec-analysis/: Cargo.toml
crates/ec-analysis/src/: analyzer.rs  ast_analyzer.rs  complexity.rs  coverage.rs  lib.rs  metrics.rs  report.rs  reversibility.rs  security.rs
crates/ec-analysis/src/visitors/: complexity_visitor.rs  coupling_visitor.rs  mod.rs  performance_visitor.rs  side_effect_visitor.rs  test_visitor.rs  unsafe_visitor.rs
crates/ec-analysis/tests/: phase4_gate.rs  week19_gate.rs  week28_gate.rs  week29_gate.rs  week30_gate.rs  week31_gate.rs  week32_gate.rs  week33_gate.rs
crates/ec-analysis/tests/fixtures/tier1_excellent/: pure_math.rs
crates/ec-analysis/tests/fixtures/tier4_bad/: unsafe_mess.rs
crates/ec-api/: Cargo.toml
crates/ec-api/src/: handlers.rs  lib.rs  main.rs  routes.rs  state.rs
crates/ec-api/tests/: week50_gate.rs
crates/ec-app/: Cargo.toml
crates/ec-app/src/: lib.rs  pipeline.rs
crates/ec-app/tests/: final_gate.rs  phase3_gate.rs  phase5_gate.rs  week17_integration.rs  week18_phase2_gate.rs  week25_gate.rs  week41_gate.rs
crates/ec-cli/: Cargo.toml
crates/ec-cli/src/: check.rs  main.rs
crates/ec-cli/tests/: week54_gate.rs
crates/ec-codegen/: Cargo.toml
crates/ec-codegen/src/: generator.rs  lib.rs  result.rs  rust.rs  spec.rs  template.rs
crates/ec-codegen/tests/: week21_gate.rs
crates/ec-constitutional/: Cargo.toml  Carto.toml
crates/ec-constitutional/benches/: engine_benchmarks.rs
crates/ec-constitutional/src/: compare.rs  constitution.rs  coverage.rs  engine.rs  evaluation.rs  frontier.rs  invariant.rs  lib.rs  meta.rs  policy.rs  reversibility.rs  security.rs  type_safety.rs  verdict.rs
crates/ec-constitutional/tests/: phase_0_gate.rs  week10_integration.rs  week11_fuzzing.rs  week3_gate.rs  week4_integration.rs  week5_engine.rs  week6_meta.rs  week7_hybrid.rs  week9_edge_cases.rs
crates/ec-epistemic/: Cargo.toml
crates/ec-epistemic/src/: bayesian.rs  bayesian_calibration.rs  calibration.rs  decay.rs  error.rs  lib.rs  propagation.rs  state.rs
crates/ec-epistemic/tests/: calibration_props.rs  epistemic_props.rs  phase5_gate.rs  week35_gate.rs  week40_gate.rs
crates/ec-fitness/: Cargo.toml
crates/ec-fitness/src/: fitness.rs  lib.rs  pareto.rs
crates/ec-governance/: Cargo.toml
crates/ec-governance/src/: audit.rs  drift_trigger.rs  lib.rs  proposal.rs  storage.rs
crates/ec-governance/tests/: week44_gate.rs  week46_gate.rs
crates/ec-memory/: Cargo.toml
crates/ec-memory/src/: bayesian_query.rs  drift.rs  graph.rs  graph.rs.orig  lib.rs  node.rs  outcome_storage.rs  query.rs  storage.rs  types.rs
crates/ec-memory/tests/: week20_gate.rs  week23_gate.rs  week24_gate.rs  week27_gate.rs  week37_gate.rs  week38_gate.rs
crates/ec-sandbox/: Cargo.toml
crates/ec-sandbox/profiles/: rust-sandbox.json
crates/ec-sandbox/src/: bayesian.rs  compiler.rs  config.rs  docker.rs  executor.rs  feedback.rs  hardened.rs  lib.rs  metrics.rs  reality.rs  security.rs
crates/ec-sandbox/tests/: week13_gate.rs  week14_gate.rs  week15_gate.rs  week16_gate.rs  week36_gate.rs
docs/: week22-fix-report.md
docs/adr/: 001-fitness-vector.md  002-epistemic-uncertainty-model.md  003-constitutional-architecture.md  ADR-004-integration-architecture.md  ADR-009-sandbox-foundation.md  ADR-010-docker-execution-strategy.md  ADR-012-security-hardening.md  ADR-013-integration-pipeline.md  ADR-014-static-code-analysis.md  ADR-015-causal-memory.md  ADR-016-code-generation.md  ADR-017-iterative-pipeline.md  ADR-018-counterfactual-query.md  ADR-019-value-drift-enhanced.md  ADR-021-slow-tests-policy.md
docs/proofs/: pareto-foundation.md  pareto-proofs.md
docs/specs/: fitness-vector.md
scripts/: check-week3.sh  week4_gate.sh
