[package]
name = "ec-api"
version = "0.1.0"
edition = "2021"
description = "REST API — thin transport layer (no business logic)"

[[bin]]
name = "ec-server"
path = "src/main.rs"

[dependencies]
ec-app          = { path = "../ec-app" }
ec-governance   = { path = "../ec-governance" }
ec-analysis     = { path = "../ec-analysis" }
ec-memory       = { path = "../ec-memory" }
ec-fitness      = { path = "../ec-fitness" }
ec-constitutional = { path = "../ec-constitutional" }
axum    = "0.7"
tokio   = { version = "1", features = ["full"] }
tower   = "0.4"
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
uuid    = { version = "1.6", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
axum-test = "14"
tempfile = "3.10"
