[package]
name = "ec-cli"
version = "0.1.0"
edition = "2021"
description = "CLI — thin adapter (read args → call → print)"

[[bin]]
name = "ec"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ec-analysis   = { path = "../ec-analysis" }
ec-governance = { path = "../ec-governance" }
ec-memory     = { path = "../ec-memory" }
ec-fitness    = { path = "../ec-fitness" }
serde_json = "1"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.10"
