[package]
name = "ec-codegen"
version = "0.1.0"
edition = "2021"
description = "Template-based code generation"

[dependencies]
ec-fitness = { path = "../ec-fitness" }
ec-analysis = { path = "../ec-analysis" }
ec-memory = { path = "../ec-memory" }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
